fix text alignment issue caused by commit ec75137d

--- a/ludo/css/style_std.css
+++ b/ludo/css/style_std.css
@@ -262,7 +262,7 @@ body {
     left: 670px;
     width: 100px;
     height: 90px;
-    line-height: 90px
+    line-height: 90px;
     color: #fff;
     font-weight: bold;
     font-size: 75px;
